# sstc-fixedsensors

./: mkdocs.yml  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  index.md
src/sstc_fixedsensors/: requirements.txt
src/sstc_fixedsensors/app/: app_activities.yaml  calval.py  instructions.md  schemas.py  streamlit_app.py
src/sstc_fixedsensors/app/activities/: calibrations_checks.py  calibrations_quickcheck.py  data_processing.py  post_calibration.py  test_cal.py  ui_post_calibration.py
src/sstc_fixedsensors/app/markdown/: instructions.md
src/sstc_fixedsensors/sensors/: decagon.py  pri.py  skye.py
