# poetry update
# poetry export --without-hashes --format=requirements.txt > requirements.txt 
# twine upload -r pypi dist/*

[tool.poetry]
name = "sstc-fixedsensors"
version = "0.1.2"
description = ""
authors = ["Jobelund <124563223+jobelund@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sstc_fixedsensors", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.8"
mkdocs = "^1.6.0"
pytest = "^7.4.3"
pyyaml = "^6.0.1"
streamlit = "^1.34.0"
streamlit_activities_menu = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
