# poetry update
# poetry export --without-hashes --format=requirements.txt > requirements.txt 
# twine upload -r pypi dist/*

[tool.poetry]
name = "sstc-fixedsensors"
version = "0.2.1"
description = ""
authors = ["Jobelund <124563223+jobelund@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sstc_fixedsensors", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "*"   # "^1.6.0"
mkdocstrings-python = "*"
pytest = "*"   # "^7.4.3"
pyyaml = "*"   # "^6.0.1"
streamlit_activities_menu = "^0.1.4"
bgsio = "^0.1.4"
sstc_utils = "*"
scipy = "*"
matplotlib = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
